[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vconverge"
description = "VPLANET parameter sweep and convergence helper"
readme = "README.md"
authors = [{name = "Megan Gialluca", email = "gialluca@uw.edu"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
]

[project.scripts]
vconverge = "vconverge.vconverge:main"

[project.urls]
Homepage = "https://github.com/mgialluca/vconverge"

[tool.setuptools]
packages = ["vconverge"]
include-package-data = true

[tool.setuptools_scm]
write_to = "vconverge/vconverge_version.py"
write_to_template = "__version__ = \"{version}\"\n"
